# lumpy

./: .gitignore  LICENSE  README.md  pyproject.toml
lumpy/: __init__.py  constructors.py  core.py  decompositions.py  equations.py  geometry.py  map.md  spaces.py  utils.py
tests/: test_lumpy.py
